# NetMesh-Fix-Live

./: build.sh  package.json  pnpm-lock.yaml  render.yaml  replit.md  server.js
.agents/memory/: MEMORY.md  artifact-reregistration.md
artifacts/api-server/src/: app.ts  index.ts  signal.ts
artifacts/api-server/src/routes/: index.ts  sessions.ts
artifacts/netmesh/: index.html  package.json  vite.config.ts
artifacts/netmesh/.replit-artifact/: artifact.toml
artifacts/netmesh/android-vpn-reference/: AndroidManifest.snippet.xml  README.md
artifacts/netmesh/android-vpn-reference/app/src/main/java/com/netmesh/vpn/: MainActivity.kt  NetMeshVpnService.kt  StreamProtocol.kt  Tun2Socks.kt  WebRtcSocksBridge.kt
artifacts/netmesh/android-vpn-reference/app/src/main/jni/: CMakeLists.txt
artifacts/netmesh/public/: sw.js
artifacts/netmesh/src/: App.tsx  index.css
artifacts/netmesh/src/layouts/: MainLayout.tsx
artifacts/netmesh/src/lib/: keepalive.ts  pacfile.ts  signal.ts  tunnel.ts
artifacts/netmesh/src/pages/: Dashboard.tsx  MyLinks.tsx  Profile.tsx  Settings.tsx  ShareLink.tsx
